Gramatica.g4
grammar Gramatica;
gramatica : line+ EOF; 
//Jose, casado(a) com Maria em 01/01/1990
line : (name ',' relacionamento name)+ (caracteristica)*;
message : (date | emoticon | link | color | mention | WORD | url)+; 
name : ( WORD | 'Jose' | 'Maria' | 'Joao' | 'Marta' | 'Pedro');
pessoa : PESSOA;
command : (SAYS | SHOUTS);
caracteristica : ('em ' date);
emoticon : ':' '-'? ')' | ':' '-'? '(';
link : '[' WORD+ ']' '(' url ')';
color : '/' WORD '/' message '/';
mention : '@' name;
protocol : 'http' 's'?;
domain : (WORD | '.')+;
path : (WORD | '/' | '.')+;
url : (protocol ':' '//')? domain path?;
date: 'em 'DATE;
relacionamento : RELACIONAMENTO;
tempo : ('ano(s)' | 'mes(es)' | 'dia(s)');
fragment A: ('A' | 'a');
fragment S: ('S' | 's');
fragment Y: ('Y' | 'y');
fragment H: ('H' | 'h');
fragment O: ('O' | 'o');
fragment U: ('U' | 'u');
fragment T: ('T' | 't');
fragment LOWERCASE: [a-z];
fragment UPPERCASE: [A-Z];
fragment DIGIT: [0-9];
RELACIONAMENTO: ('casado(a) com' | 'filho de' | 'amigo(a) de');
PESSOA: (LOWERCASE | UPPERCASE)+;
SAYS: S A Y S;
SHOUTS: S H O U T S;
WORD: (LOWERCASE | UPPERCASE | '_')+;
WHITESPACE: (' ' | '\t') -> skip;
NEWLINE: ('\r'? '\n' | '\r')+ -> skip;
NUMBER: DIGIT+ ([.,] DIGIT+)?;
DIA: DIGIT DIGIT;
MES: DIGIT DIGIT;
ANO: DIGIT DIGIT DIGIT DIGIT ;
DATE: DIA '/' MES '/' ANO;
